Pocket watch animation

--- a/cpp-sfml/makefile
+++ b/cpp-sfml/makefile
@@ -1,6 +1,12 @@
+all: watch spiral
+
 watch: clean
 	g++ -c watch.cpp
 	g++ watch.o -o watch -lsfml-graphics -lsfml-window -lsfml-system
 
+spiral: clean
+	g++ -c spiral.cpp
+	g++ spiral.o -o spiral -lsfml-graphics -lsfml-window -lsfml-system
+
 clean:
-	rm -f watch watch.o
+	rm -f watch watch.o spiral spiral.o
